--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,34 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="setSwitch"
-            type="Boolean" />
-
-        <variable
-            name="setChecked"
-            type="com.enesselcuk.jatpeackdatastore.ui.MainActivity" />
-    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity">
 
-        <include
-            android:id="@+id/view_item"
-            layout="@layout/view_toolbar"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/list_recyclerview"
+            android:layout_margin="10dp"
+            android:background="@drawable/line_toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:setCheckedToolbar="@{setChecked}"
-            app:setSwitchToolbar="@{setSwitch}" />
+            app:layout_constraintTop_toTopOf="parent">
 
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/show_completed_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginHorizontal="10dp" />
+
+        </androidx.appcompat.widget.Toolbar>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_recyclerview"
@@ -41,7 +37,7 @@
             app:layout_constraintBottom_toTopOf="@id/sort"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_item"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             tools:listitem="@layout/item_person" />
 
 
@@ -62,9 +58,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:contentDescription="@string/image_reorder"
                 android:src="@drawable/ic_baseline_reorder_24"
-                app:tint="?attr/colorOnSurface"
-                android:contentDescription="@string/image_reorder" />
+                app:tint="?attr/colorOnSurface" />
 
             <com.google.android.material.chip.ChipGroup
                 android:layout_width="match_parent"
